--- a/app/views/groups/_topic.slim
+++ b/app/views/groups/_topic.slim
@@ -8,7 +8,7 @@
         
         .counter-dropdown-wrapper
           - if topic.sub_topics.present?
-            label for="topic-#{topic.id}"
+            label type="label" for="topic-#{topic.id}"
             
       - if topic.sub_topics.present?
         = render 'groups/topic', topics: topic.sub_topics
