--- a/app/views/groups/index.slim
+++ b/app/views/groups/index.slim
@@ -1,3 +1,5 @@
+= render 'topics/new'
+
 .content-groups-wrapper
   = render 'groups/subscriptions', subscriptions: @subscriptions
   = render 'groups/groups', groups: @groups
