--- a/app/webpack/stylesheets/groups/groups.scss
+++ b/app/webpack/stylesheets/groups/groups.scss
@@ -9,6 +9,8 @@
     width: 100%;
     height: 100%;
     
+    ul { padding-left: 18px; }
+    
     // Checkboxes
     .group-wrapper ul { display: none; }
     .group-wrapper input:checked ~ ul { display: block; }
@@ -32,7 +34,9 @@
         
         &.active {
           background-color: $color-cadet-blue;
+          .title-wrapper p { font-weight: 900;}
         }
+        
         
         .title-wrapper {
           display: flex;
@@ -44,17 +48,16 @@
           
           p {
             margin: 0;
-            margin-left: 18px;
+            padding-left: 12px;
             font-size: 14px;
             font-weight: 500;
-            &.active { font-weight: 700; }
           }
           
           a.new-element {
+            padding-left: 12px;
             font-size: 14px;
             font-weight: 700;
             color: $color-blue;
-            margin-left: 10px;
             cursor: pointer;
           }
         }
