--- a/app/views/groups/_groups.slim
+++ b/app/views/groups/_groups.slim
@@ -1,6 +1,7 @@
 .content-group-wrapper
   .group-scroll
     ul.tree
+      // Render Root of the Group from NewsCategory
       - groups.each do |group|
         li.group-wrapper.root-level
           .main-content class="#{current_user.is_group_subscription(group) ? 'active' : ''}" data-type="NewsCategory" id="#{group.id}"
@@ -10,11 +11,9 @@
             
             .counter-dropdown-wrapper
               span.counter #{current_user.group_subscription_counts(group)}
-              - if group.topics.present?
-                label type="label" for="news-category-#{group.id}"
-              - else
-                label type="label" for="news-category-#{group.title}"
-            
+              label type="label" for="news-category-#{group.id}"
+                
+          // Render Topics for NewsCategory under Dropdown
           - if group.topics.present?
             - group.topics.where(is_approved: true).each do |topic|
               input type="checkbox" id="news-category-#{group.id}"
@@ -25,49 +24,22 @@
                       p #{topic.title.capitalize}
                     
                     .counter-dropdown-wrapper
-                      - if topic.sub_topics.present?
-                        label type="label" for="topic-#{topic.id}"
-                        
+                      label type="label" for="topic-#{topic.id}"
+                  
+                  // If Topic have SubTopics show tham + 'Add Topic' link
                   - if topic.sub_topics.present?
                     = render 'groups/topic', topics: topic.sub_topics
-                    
-                  - if topic.sub_topics.present?
-                    ul
-                      li.group-wrapper
-                        .main-content
-                          .title-wrapper
-                            = image_pack_tag 'media/images/icons/ic_clock.png', class: 'main'
-                            
-                            div data-action="create-topic" data-href="/topics/new" data-type="Topic" data-id="#{topic.id}"
-                              a.new-element href="#" Add Topic
-                            
+                  
+                  // If Topic have now SubTopics show only 'Add Topic' link under Dropdown
                   - else
-                    input type="checkbox" id="topic-#{topic.title}"
-                    ul
-                      li.group-wrapper
-                        .main-content
-                          .title-wrapper
-                            = image_pack_tag 'media/images/icons/ic_clock.png', class: 'main'
-                            
-                            div data-action="create-topic" data-href="/topics/new" data-type="Topic" data-id="#{topic.id}"
-                              a.new-element href="#" Add Topic
+                    input type="checkbox" id="topic-#{topic.id}"
+                  
+                  = render 'groups/add_topic', data_type: 'Topic', data_id: topic.id
                               
-            ul
-              li.group-wrapper
-                .main-content
-                  .title-wrapper
-                    = image_pack_tag 'media/images/icons/ic_clock.png', class: 'main'
-                    
-                    div data-action="create-topic" data-href="/topics/new" data-type="NewsCategory" data-id="#{group.id}"
-                      a.new-element href="#" Add Topic
-                    
+            // Show 'Add Topic' to NewsCategory
+            = render 'groups/add_topic', data_type: 'NewsCategory', data_id: group.id
+                      
+          // Render only 'Add Topic' under Dropdown
           - else
-            input type="checkbox" id="news-category-#{group.title}"
-            ul
-              li.group-wrapper
-                .main-content
-                  .title-wrapper
-                    = image_pack_tag 'media/images/icons/ic_clock.png', class: 'main'
-                    
-                    div data-action="create-topic" data-href="/topics/new" data-type="NewsCategory" data-id="#{group.id}"
-                      a.new-element href="#" Add Topic
+            input type="checkbox" id="news-category-#{group.id}"
+            = render 'groups/add_topic', data_type: 'NewsCategory', data_id: group.id
