--- a/app/views/groups/_groups.slim
+++ b/app/views/groups/_groups.slim
@@ -26,7 +26,7 @@
                     .counter-dropdown-wrapper
                       label type="label" for="topic-#{topic.id}"
                   
-                  // If Topic have SubTopics show tham + 'Add Topic' link
+                  // If Topic have SubTopics show them + 'Add Topic' link
                   - if topic.sub_topics.present?
                     = render 'groups/topic', topics: topic.sub_topics
                   
