Add nesting_position for GroupsController api, update dropdown icon in Group tree

--- a/app/webpack/stylesheets/groups/groups.scss
+++ b/app/webpack/stylesheets/groups/groups.scss
@@ -74,6 +74,10 @@
             width: 12px;
             height: auto;
             margin: 0 18px 0 0;
+            
+            &.flip {
+              transform: rotate(-180deg);
+            }
           }
         }
       }
