Add Search to Groups without styles

--- a/app/views/groups/index.slim
+++ b/app/views/groups/index.slim
@@ -3,3 +3,4 @@
 .content-groups-wrapper
   = render 'groups/subscriptions', subscriptions: @subscriptions
   = render 'groups/groups', groups: @groups
+  = render 'groups/search', groups: @groups_for_search
