--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -26,7 +26,7 @@ html
             = link_to 'Home', root_path, class: 'nav-link'
           - if current_user
             li.nav-item
-              = link_to 'Groups', root_path, class: 'nav-link'
+              = link_to 'Groups', groups_path, class: 'nav-link'
             li.nav-item
               = link_to 'Calendar', events_path, class: 'nav-link'
             li.nav-item
@@ -53,8 +53,6 @@ html
             
         - if current_user
           .div.d-flex.align-items-center
-            .navbar-icon-wrappers.search-icon
-              = image_pack_tag('media/images/icons/ic_search.png', id: 'search-icon')
             .navbar-icon-wrappers
               = image_pack_tag('media/images/icons/ic_dialog.png')
             .navbar-icon-wrappers
