--- a/app/views/groups/_search_form.slim
+++ b/app/views/groups/_search_form.slim
@@ -1,9 +1,11 @@
-h2 Filter
-input id="group-search-input" type="text" placeholder="Search.."
-
-#group-search-list
-  - @groups_for_search.each do |group|
-    .search-element-wrapper
-      span #{topic_full_title(group)}
-      p #{group.title}
-      hr
+form.search-wrapper
+  .material-field
+    input id="group-search-input" type="text" placeholder="What do you whant to find?" class='form-control' autocomplete='off'
+  
+  .search-results-wrapper
+    #group-search-list
+      - @groups_for_search.each do |group|
+        .search-element-wrapper data-title="#{group.title.capitalize}"
+          .text-content
+            h5 #{topic_short_title(group)}
+            span #{group.title.capitalize}
