--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -176,3 +176,29 @@ a.btn.floating {
   padding: 12px 24px;
   border-radius: 28px;
 }
+
+// Search
+.search-wrapper {
+  height: 600px;
+  
+  .search-results-wrapper {
+    width: 100%;
+    height: 95%;
+    overflow: auto;
+    
+    .search-element-wrapper {
+      padding: 10px 0;
+      border-bottom: 1px solid $color-light-grey;
+      
+      h5 {
+        font-size: 12px;
+        color: $color-grey;
+      }
+      
+      span {
+        font-size: 14px;
+        color: $color-black;
+      }
+    }
+  }
+}
