--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -187,17 +187,36 @@ a.btn.floating {
     overflow: auto;
     
     .search-element-wrapper {
+      display: flex;
+      justify-content: space-between;
       padding: 10px 0;
       border-bottom: 1px solid $color-light-grey;
       
-      h5 {
-        font-size: 12px;
-        color: $color-grey;
+      .text-content {
+        h5 {
+          font-size: 12px;
+          color: $color-grey;
+        }
+        
+        span {
+          font-size: 14px;
+          color: $color-black;
+        }
       }
       
-      span {
-        font-size: 14px;
-        color: $color-black;
+      .action-content .btn {
+        height: 36px;
+        padding: 0.5rem 1.3rem !important;
+        line-height: 1.2;
+      }
+      
+      .action-content .btn.btn-outline-primary {
+        padding: 0.5rem 0.75rem !important;
+      }
+      
+      .action-content .btn:focus {
+        outline:none;
+        box-shadow: none;
       }
     }
   }
