Add Subscribtions logic between NewsArticles and Groups

--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -204,6 +204,13 @@ a.btn.floating {
         }
       }
       
+      .action-content {
+        display: flex;
+        align-items: center;
+      }
+      
+      .action-content p { margin: 0 }
+      
       .action-content .btn {
         height: 36px;
         padding: 0.5rem 1.3rem !important;
