--- a/app/views/news_articles/_show.slim
+++ b/app/views/news_articles/_show.slim
@@ -1,8 +1,12 @@
 .news-article-wrapper
-  .mb-4
-    - news_article.news_categories.each do |news_category|
-      span.title-main-wrapper
-        = news_category.title.capitalize
+  .groups-subscription-wrapper
+    .subscriptions-list
+      - news_article.news_categories.each do |news_category|
+        span.title-main-wrapper
+          = news_category.title.capitalize
+          
+      span.title-main-wrapper.new
+        = link_to '+ Group', search_news_article_path(news_article), remote: true
   
   - if news_article.img_url.present?
     = image_tag(news_article.img_url, class: 'url-full-image', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
@@ -24,3 +28,5 @@
       = news_article.title
     .news-article-description
       = news_article.description
+      
+= render 'news_articles/search'
