--- a/app/webpack/stylesheets/news_articles/index.scss
+++ b/app/webpack/stylesheets/news_articles/index.scss
@@ -2,6 +2,11 @@
 .news-article-wrapper {
   width: 100%;
   
+  .groups-subscription-wrapper {
+    margin-bottom: 20px;
+    display: flex;
+  }
+  
   .news-info-panel {
     margin-top: 16px;
     position: relative;
