--- a/app/webpack/stylesheets/custom_fields.scss
+++ b/app/webpack/stylesheets/custom_fields.scss
@@ -177,6 +177,21 @@ a.btn.floating {
   border-radius: 28px;
 }
 
+// Bootstrap Dropdowns
+.dropdown-submenu { position: relative; }
+.dropdown-submenu> a:after {
+  content: url("../images/icons/ic_dropdown_arrow.png");
+  float: right;
+  transform: rotate(270deg);
+}
+.dropdown-submenu>.dropdown-menu {
+    top: 0;
+    left: 100%;
+    margin-top: 0px;
+    margin-left: 0px;
+}
+.dropdown-submenu:hover>.dropdown-menu { display: block; }
+
 // Search
 .search-wrapper {
   height: 600px;
