Update ReplyComments styles

--- a/app/webpack/stylesheets/comments/index.scss
+++ b/app/webpack/stylesheets/comments/index.scss
@@ -21,7 +21,8 @@
     
     &.replied {
       padding: 10px;
-      background-color: $color-light-blue;
+      background-color: $color-cadet-blue;
+      margin-bottom: 24px;
     }
     
     .comment-image-wrapper {}
