--- a/app/webpack/stylesheets/events/event.scss
+++ b/app/webpack/stylesheets/events/event.scss
@@ -4,6 +4,7 @@
   flex: 2 auto;
   
   .event-card {
+    cursor: pointer;
     display: inline-block;
     vertical-align: top;
     margin-right: 16px;
