Update width wrapper for settings on Web

--- a/app/views/users/_change_password.slim
+++ b/app/views/users/_change_password.slim
@@ -1,4 +1,4 @@
-.w-75.my-5.mx-auto
+.d-width-wrapper
   h4.mb-5 Change password
   = form_for @user, url: { action: :change_password } do |f|
     - if flash[:error].present?
