--- a/app/views/contact_us_requests/new.slim
+++ b/app/views/contact_us_requests/new.slim
@@ -1,4 +1,4 @@
-.w-75.my-5.mx-auto
+.d-width-wrapper
   h4.mb-5 Contact Us
   = form_for @contact_us_request do |f|
     - if flash[:error].present?
