--- a/app/views/devise/passwords/edit.slim
+++ b/app/views/devise/passwords/edit.slim
@@ -1,4 +1,4 @@
-.w-75.my-5.mx-auto
+.d-width-wrapper
   h5 Change your password
 
   = form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f|
