Fix typo in title

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -36,7 +36,7 @@ $grid-breakpoints: (
 @import 'kaminari';
 @import 'main-elements';
 @import 'notification';
-@import 'spiner';
+@import 'spinner';
 @import 'toggle_switcher';
 @import './comments/index';
 @import './font_customaizer/index';
