--- a/app/views/groups/_search_form.slim
+++ b/app/views/groups/_search_form.slim
@@ -12,6 +12,6 @@ form.search-wrapper
           
           .action-content
             - if current_user.is_group_subscription(group)
-              = link_to "Unsubscribe", unsubscribe_groups_path(type: group.class.name, id: group.id), class: "btn btn-outline-primary", remote: true, method: :delete, data: { type: group.class.name, id: group.id }
+              = link_to "Remove", unsubscribe_groups_path(type: group.class.name, id: group.id), class: "btn btn-outline-primary", remote: true, method: :delete, data: { type: group.class.name, id: group.id }
             - else
-              = link_to "Subscribe", subscribe_groups_path(type: group.class.name, id: group.id), class: "btn btn-primary", remote: true, method: :post, data: { type: group.class.name, id: group.id }
+              = link_to "Add", subscribe_groups_path(type: group.class.name, id: group.id), class: "btn btn-primary", remote: true, method: :post, data: { type: group.class.name, id: group.id }
