--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -28,7 +28,7 @@ html
             li.nav-item
               = link_to 'Groups', groups_path, class: 'nav-link'
             li.nav-item
-              = link_to 'Calendar', events_path, class: 'nav-link'
+              = link_to 'Events', events_path, class: 'nav-link'
             li.nav-item
               = link_to 'Images', images_user_image_path(current_user.username), class: 'nav-link'
             li.nav-item
@@ -41,7 +41,7 @@ html
             li.nav-item
               = link_to 'Groups', '#', class: 'nav-link', data: { toggle: "modal", target: "#modal-sign-in-or-sign-up" }
             li.nav-item
-              = link_to 'Calendar', '#', class: 'nav-link', data: { toggle: "modal", target: "#modal-sign-in-or-sign-up" }
+              = link_to 'Events', '#', class: 'nav-link', data: { toggle: "modal", target: "#modal-sign-in-or-sign-up" }
             li.nav-item
               = link_to 'Images', '#', class: 'nav-link', data: { toggle: "modal", target: "#modal-sign-in-or-sign-up" }
             li.nav-item
