--- a/app/views/news_articles/_search_form.slim
+++ b/app/views/news_articles/_search_form.slim
@@ -12,6 +12,6 @@ form.search-wrapper
           
           .action-content
             - if @news_article.is_group_subscription(group)
-              p Already subscribed
+              p Already added
             - else
-              = link_to "Subscribe", topic_subscription_news_article_path(news_article_id: @news_article.id, news_article_subscription: { topic_id: group.id }), class: "btn btn-primary", remote: true, method: :post
+              = link_to "Add", topic_subscription_news_article_path(news_article_id: @news_article.id, news_article_subscription: { topic_id: group.id }), class: "btn btn-primary", remote: true, method: :post
