--- a/app/views/shared/panels/_news_categories.slim
+++ b/app/views/shared/panels/_news_categories.slim
@@ -2,10 +2,11 @@
   - news_categories.each do |news_category|
     .btn-group.category-element class="#{current_page?(news_category_path(news_category)) ? 'active' : ''}"
       = link_to news_category.title.capitalize, [:news_category, id: news_category.id]
-      - if news_category.topics.present?
+      - news_category_topics = news_category.topics.where(is_approved: true)
+      - if news_category_topics.present?
         = image_pack_tag('media/images/icons/ic_dropdown_arrow.png')
         ul.dropdown-menu aria-labelledby="dropdownMenu" role="menu"
-          - news_category.topics.where(is_approved: true).each do |topic|
+          - news_category_topics.each do |topic|
             - if topic.sub_topics.blank?
               li
                 a.dropdown-item href="#" #{topic.title}
