Fix typo for Events

--- a/app/views/events/edit.js.erb
+++ b/app/views/events/edit.js.erb
@@ -14,7 +14,7 @@ $('#datepicker-edit-event').datepicker({
 });
 
 // Timepicker
-let timePickerOptions = {
+timePickerOptions = {
   step: 5,
   listWidth: 1
 }
