Change lables in Settings panel, update icon for SquadRequest decline

--- a/app/views/settings/edit.slim
+++ b/app/views/settings/edit.slim
@@ -21,19 +21,19 @@
         h1.section-title Notify me about
         
         .section-element
-          .section-element-lable Post
+          .section-element-lable Posts
           label.switch
             = f.check_box :is_posts
             span.slider.default.round
             
         .section-element
-          .section-element-lable Image List
+          .section-element-lable Images
           label.switch
             = f.check_box :is_images
             span.slider.default.round
             
         .section-element
-          .section-element-lable Video List
+          .section-element-lable Videos
           label.switch
             = f.check_box :is_videos
             span.slider.default.round
