--- a/app/views/contact_us_requests/new.slim
+++ b/app/views/contact_us_requests/new.slim
@@ -7,19 +7,19 @@
         
     .material-field
       = f.label 'Email'
-      = f.email_field :email, class: 'form-control', required: true
+      = f.email_field :email, value: current_user&.email , class: 'form-control', required: true
       
     .material-field
       = f.label 'Username'
-      = f.text_field :username, class: 'form-control', required: true
+      = f.text_field :username, value: current_user&.username,  class: 'form-control', required: true
       
     .material-field
       = f.label 'First name'
-      = f.text_field :first_name, class: 'form-control', required: true
+      = f.text_field :first_name, value: current_user&.first_name, class: 'form-control', required: true
       
     .material-field
       = f.label 'Last name'
-      = f.text_field :last_name, class: 'form-control', required: true
+      = f.text_field :last_name, value: current_user&.last_name, class: 'form-control', required: true
       
     .material-field
       = f.label 'Subject'
