--- a/app/views/events/_form.slim
+++ b/app/views/events/_form.slim
@@ -11,21 +11,21 @@
       .input-group-text
         = image_pack_tag('media/images/icons/ic_calendar.png', class: 'img-responsive')
       
-    = text_field_tag 'event[date]', '', class: 'form-control', id: 'datepicker-edit-event', placeholder: 'Date', autocomplete: 'off', required: true
+    = text_field_tag 'event[date]', date_picker_timestamp(@event.start_date), class: 'form-control', id: 'datepicker-edit-event', placeholder: 'Date', autocomplete: 'off', required: true
     
   .input-group.mb-3
     .input-group-prepend
       .input-group-text
         = image_pack_tag('media/images/icons/ic_clock.png', class: 'img-responsive')
       
-    = f.text_field :start_date, value: '', autocomplete: 'off', class: 'form-control timepicker', placeholder: 'Start Time', required: true
+    = f.text_field :start_date, value: time_picker_timestamp(@event.start_date), autocomplete: 'off', class: 'form-control timepicker', placeholder: 'Start Time', required: true
     
   .input-group.mb-3
     .input-group-prepend
       .input-group-text
         = image_pack_tag('media/images/icons/ic_clock.png', class: 'img-responsive')
       
-    = f.text_field :end_date, value: '', autocomplete: 'off', class: 'form-control timepicker', placeholder: 'End Time', required: true
+    = f.text_field :end_date, value: time_picker_timestamp(@event.end_date), autocomplete: 'off', class: 'form-control timepicker', placeholder: 'End Time', required: true
     
   .actions
     = f.submit 'Update', class: 'btn btn-primary w-100'
