--- a/app/webpack/stylesheets/groups/groups.scss
+++ b/app/webpack/stylesheets/groups/groups.scss
@@ -24,6 +24,7 @@
     .group-wrapper input[type=checkbox] { display: none; }
   
     .group-wrapper {
+      cursor: pointer;
       width: 100%;
       display: block;
       padding: 0px 0px 0px 18px;
