Fix typo in the word - Active

--- a/app/views/groups/_comments.slim
+++ b/app/views/groups/_comments.slim
@@ -6,4 +6,4 @@
       
   - else
     .subscriptions-scroll#comments-list-placeholder
-      p.mt-4 You have no acttive subscriptions.
+      p.mt-4 You have no active subscriptions.
