Add image to Posts form

--- a/app/webpack/stylesheets/application.scss
+++ b/app/webpack/stylesheets/application.scss
@@ -43,6 +43,7 @@ $grid-breakpoints: (
 @import './modals/index';
 @import './home/index';
 @import './news_articles/index';
+@import './posts/index';
 @import './user_profile/index';
 @import './video_player/index';
 @import './events/index';
