--- a/app/views/posts/_form.slim
+++ b/app/views/posts/_form.slim
@@ -1,16 +1,28 @@
-= form_with(model: post, url: (post.persisted? ?  post_path(post) : posts_path), local: true) do |f|
-
-  .input-group.mb-3
-   = f.text_field :title, autocomplete: 'off', class: 'form-control', placeholder: 'Title', required: true
+.d-width-wrapper
+  = form_with(model: post, url: (post.persisted? ?  post_path(post) : posts_path), local: true) do |f|
     
-  .input-group.mb-3
-    = f.text_area :description, autocomplete: 'off', class: 'form-control', placeholder: 'Event Description', required: true, rows: 3
+    .input-group.mb-3
+     = f.file_field :image, accept: 'image/png, image/jpeg', class: 'post-form-image'
+     
+     .post-form-image-mask#post-form-image-mask
+       - if post.image.present?
+         img#post-image.post-photo-image style= "display: inline;" src="#{post.image.url}"
+         = image_pack_tag 'media/images/icons/ic_add_photo.png', class: 'icon-add-photo', id: 'icon-add-photo', style: 'display:none;'
+       - else
+         img#post-image.post-photo-image src=""
+         = image_pack_tag 'media/images/icons/ic_add_photo.png', class: 'icon-add-photo', id: 'icon-add-photo'
     
-  .input-group.mb-3
-    = f.select :news_category_id, NewsCategory.all.map { |news_category| [news_category.title, news_category.id] }
+    .input-group.mb-3
+     = f.text_field :title, autocomplete: 'off', class: 'form-control', placeholder: 'Title', required: true
+      
+    .input-group.mb-3
+      = f.text_area :description, autocomplete: 'off', class: 'form-control', placeholder: 'Event Description', required: true, rows: 3
+      
+    .input-group.mb-3
+      = f.select :news_category_id, NewsCategory.all.map { |news_category| [news_category.title, news_category.id] }
+      
+    .input-group.mb-3
+      = f.select :topic_id, Topic.all.map { |topic| [topic.title, topic.id] }
     
-  .input-group.mb-3
-    = f.select :topic_id, Topic.all.map { |topic| [topic.title, topic.id] }
-  
-  .actions
-    = f.submit 'Submit', class: 'btn btn-primary w-100'
+    .actions
+      = f.submit 'Submit', class: 'btn btn-primary w-100'
