--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -32,7 +32,7 @@ html
             li.nav-item
               = link_to 'Images', images_user_image_path(current_user.username), class: 'nav-link'
             li.nav-item
-              = link_to 'Posts', root_path, class: 'nav-link'
+              = link_to 'Posts', posts_path, class: 'nav-link'
             li.nav-item
               = link_to 'Map', root_path, class: 'nav-link'
             li.nav-item
