--- a/app/views/posts/index.slim
+++ b/app/views/posts/index.slim
@@ -1,20 +1,51 @@
-- @posts.each do |post|
-  .card
-    = link_to 'Edit', edit_post_path(post)
-    = link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'Do you really want to delete this Post?' }
-    hr
-    - if post.is_lited(current_user)
-      = link_to 'Unlit', post_post_lits_path(post), method: :delete, remote: true
-    - else
-      = link_to 'Lit', post_post_lits_path(post), method: :post, remote: true
-      
-    = link_to 'Comment', post_post_comments_path(post)
-    p Views: #{post.views.size}
-    .card-body
-      h5.card-title #{post.title}
-      
-      p.card-text #{post.description}
-
+.posts-wrapper.my-4
+  .posts-cards-wrapper
+    - @posts.each do |post|
+      .posts-card value="#{post.id}"
+        
+        .post-header-panel
+          .state
+            p On approve
+            
+          .actions
+            = link_to edit_post_path(post) do
+              = image_pack_tag('media/images/icons/ic_edit.png')
+            
+            = link_to post_path(post), method: :delete, data: { confirm: 'Do you really want to delete this Post?' } do
+              = image_pack_tag('media/images/icons/ic_delete_object.png')
+              
+        .posts-image-wrapper
+          - if post.image.present?
+            = image_tag(post.image.url, class: 'post-image', onerror: "this.error=null;this.src='#{asset_pack_path('media/images/placeholders/placeholder-news.png')}'")
+          - else
+            = image_pack_tag('media/images/placeholders/placeholder-news.png', class: 'post-image')
+          
+          .post-title-panel
+            = link_to post.title, post_post_comments_path(post)
+          
+          .info-panel
+            .div class="info-panel-value-wrapper"
+              - if post.is_lited(current_user)
+                = link_to post_post_lits_path(post), method: :delete, remote: true do
+                  i.ic.lit.active
+              - else
+                = link_to post_post_lits_path(post), method: :post, remote: true do
+                  i.ic.lit
+                  
+              span.info-panel-value #{counter_measurement(post.lits.size)}
+              
+            .info-panel-value-wrapper
+              = link_to post_post_comments_path(post), class: 'comment-link-icon' do
+                i class=(post.is_commented(current_user) ? "ic comment active" : "ic comment")
+              span.info-panel-value #{counter_measurement(post.comments.size)}
+              
+            .info-panel-value-wrapper.pointer-disable
+              i class=(post.is_viewed(current_user) ? "ic view active" : "ic view")
+              span.info-panel-value #{counter_measurement(post.views.size)}
+          
+  //.mt-4.d-flex.justify-content-center
+    = paginate @posts
+    
 #container-floating-wrapper
   #container-floating
     = link_to new_post_path do
