--- a/app/webpack/stylesheets/posts/index.scss
+++ b/app/webpack/stylesheets/posts/index.scss
@@ -1,1 +1,131 @@
 @import 'form';
+
+.posts-wrapper {
+  margin: 24px 0px;
+}
+
+.posts-wrapper .posts-switcher-title {
+  display: inline-block;
+  cursor: pointer;
+  
+  &.active {
+    color: $color-blue;
+  }
+}
+
+.posts-cards-wrapper .posts-card:nth-child(4n) {
+  margin-right: 0;
+}
+
+.posts-cards-wrapper .posts-card {
+  display: inline-block;
+  position: relative;
+  vertical-align: top;
+  margin-right: 16px;
+  margin-bottom: 16px;
+  align-items: center;
+  width: calc(100% * (1/4) - 12px);
+  min-height: 168px;
+  border-radius: 4px;
+}
+
+.posts-cards-wrapper .posts-card .post-header-panel {
+  position: absolute;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 9999;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 12px;
+  
+  .actions a {
+    margin-left: 20px;
+  }
+  
+  .state p {
+    margin: 0;
+    padding: 5px 12px;
+    border-radius: 50px;
+    background-color: $color-blue;
+    color: $color-white;
+    font-size: 14px;
+  }
+  
+}
+
+.posts-cards-wrapper .posts-image-wrapper {
+  position: relative;
+  width: 100%;
+  height: 168px;
+  object-fit: cover;
+  text-align: center;
+  overflow: hidden;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.5) 100%);
+}
+
+.posts-cards-wrapper .posts-image-wrapper .post-title-panel {
+  position: absolute;
+  bottom: 48px;
+  right: 0;
+  left: 0;
+  height: 20px;
+  padding: 0 16px;
+  text-align: left;
+  
+  a {
+    color: $color-white;
+    display: block;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+}
+
+.posts-cards-wrapper img.post-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: 4px;
+}
+
+.posts-cards-wrapper p.posts-title {
+  margin: 8px 0 0 0;
+  color: $color-black;
+  font-size: 16px;
+  font-weight: 400;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.posts-cards-wrapper p.posts-description {
+  margin: 0;
+  color: $color-grey;
+  font-size: 14px;
+  font-weight: 400;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+}
+
+@media (max-width: map-get($grid-breakpoints, "lg")) {
+  .posts-cards-wrapper .posts-card:nth-child(4n) { margin-right: 16px; }
+  .posts-cards-wrapper .posts-card:nth-child(2n) { margin-right: 0px; }
+  .posts-cards-wrapper .posts-card {
+    width: calc(100% * (1/2) - 10.5px);
+    margin-right: 15px;
+  }
+}
+
+@media (max-width: map-get($grid-breakpoints, "md")) {
+  .posts-cards-wrapper .posts-card:nth-child(4n) { margin-right: 0px; }
+  .posts-cards-wrapper .posts-card:nth-child(3n) { margin-right: 0px; }
+  .posts-cards-wrapper .posts-card {
+    width: 100%;
+    margin-right: 0px;
+  }
+}
